remove header image, change style home page

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -326,7 +326,7 @@ input {
 											display: inline-grid;
 											align-items: center;
 											height: 100%;
-											color: var(--primary);
+											color: var(--text-base);
 											width: 100%;
 
 											.ant-empty-image {
