home page webmap name style

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -413,7 +413,7 @@ input {
 														white-space: initial;
 														text-overflow: ellipsis;
 														line-height: 20.7px;
-														text-align: left;
+														text-align: center;
 														letter-spacing: normal;
 														-webkit-line-clamp: 3;
 														display: -webkit-box;
