--- a/nextgisweb/resource/nodepkg/description/DescComponent.less
+++ b/nextgisweb/resource/nodepkg/description/DescComponent.less
@@ -4,6 +4,20 @@
 
 .desc-component {
 
+	.ant-divider-horizontal.ant-divider-with-text::before {
+		transform: translateY(0%);
+	}
+	.type-title {
+		color: var(--text-secondary);
+		font-size: 12px;
+		display: block;
+		text-align: end;
+		border-bottom: 0.005em solid var(--divider-color);
+	}
+
+	.ant-space-gap-row-small {
+		row-gap: 0px;
+	}
 	.ck-content {
 		overflow: auto;
 		margin: 5px;
