--- a/nextgisweb/resource/nodepkg/resource-section/description/ResourceSectionDescription.less
+++ b/nextgisweb/resource/nodepkg/resource-section/description/ResourceSectionDescription.less
@@ -6,6 +6,7 @@
 
         .ant-collapse-content {
             border-top: 1px solid #f0f0f0;
+            font-weight: normal;
         }
     }
 }
