--- a/nextgisweb/webmap/nodepkg/imodule/IModule.less
+++ b/nextgisweb/webmap/nodepkg/imodule/IModule.less
@@ -105,15 +105,14 @@
     width: 100%;
     height: 100%;
     justify-content: space-between;
-    border-radius: 3px;
-    box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
+    border-radius: 4px;
+    box-shadow: 0 0px 3px var(--text-secondary);
     position: absolute;
     content: "";
     display: flex;
     clear: both;
     flex-direction: column;
     background: #fff;
-    border: 1px solid var(--icon-color);
     box-sizing: border-box;
 
     .title {
