--- a/nextgisweb/webmap/nodepkg/imodule/IModule.less
+++ b/nextgisweb/webmap/nodepkg/imodule/IModule.less
@@ -472,8 +472,8 @@
 
 .link-button {
     font-size: 16px;
-    width: 24px;
-    height: 24px;
+    width: 24px !important;
+    height: 24px !important;
     display: flex;
     justify-items: center;
     justify-content: center;
