resource section main webmap preview social

--- a/nextgisweb/resource/nodepkg/resource-section/main/ResourceSectionMain.less
+++ b/nextgisweb/resource/nodepkg/resource-section/main/ResourceSectionMain.less
@@ -34,3 +34,13 @@ dl.ngw-resource-main-section-summary {
 .ant-divider-horizontal.ant-divider-with-text::after {
     transform: translateY(0%);
 }
+
+.preview-link {
+    height: 100%;
+    border-radius: 4px;
+    display: block;
+
+    &:hover {
+        box-shadow: 0 0 5px 0 var(--divider-color);
+    }
+}
