change dropdown webmap layer tree, navigation menu

--- a/nextgisweb/webmap/nodepkg/display/component/NavigationMenu.less
+++ b/nextgisweb/webmap/nodepkg/display/component/NavigationMenu.less
@@ -26,14 +26,13 @@
         &:hover>svg.icon {
             opacity: 1;
         }
+
+
     }
 }
 
-.customlink {
-    width: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-item {
+    padding: 5px;
 }
 
 .infoblock {
@@ -47,7 +46,7 @@
     .iconLinks {
         opacity: 0.5;
         cursor: pointer;
-        height: 40px;
+        height: 32px;
         user-select: none;
         text-align: center;
         font-size: 24px;
