--- a/nextgisweb/webmap/nodepkg/layers-tree/DropdownActions.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/DropdownActions.less
@@ -1,9 +1,7 @@
 .dropdown-content {
-	box-shadow:
-		0 3px 6px -4px rgb(0 0 0 / 12%),
-		0 6px 16px 0 rgb(0 0 0 / 8%),
-		0 9px 28px 8px rgb(0 0 0 / 5%);
-	background: #fff;
+	background-color: #ffffff;
+	border-radius: 4px;
+	box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
 }
 
 .dropdown-content .ant-dropdown-menu {
