change style home page

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -127,7 +127,7 @@ input {
 			.search-block {
 				display: flex;
 				justify-content: space-between;
-
+				padding: 5px;
 
 				.search {
 					max-width: 500px;
@@ -157,7 +157,7 @@ input {
 					}
 
 					.ant-input-affix-wrapper {
-						border-image: linear-gradient(0.25turn, var(--primary), var(--primary), #2a388c00);
+						border-image: linear-gradient(0.25turn, #2a388c80, #2a388c80, #2a388c00);
 						border-image-slice: 1;
 						border-bottom-style: solid !important;
 						border-style: none;
@@ -208,7 +208,7 @@ input {
 				.menu-list {
 					max-width: 300px;
 					min-height: 350px;
-					padding: 3px;
+					padding: 5px;
 
 					.dnd-container-menu {
 						display: flex;
@@ -234,7 +234,7 @@ input {
 									display: inline-flex;
 									align-items: center;
 									box-sizing: border-box;
-									margin: 5px;
+									margin: 5px 0;
 									border-radius: 3px;
 									min-width: 72px;
 
@@ -261,7 +261,7 @@ input {
 
 				.content-maps-grid {
 					width: 100%;
-					padding: 3px;
+					padding: 5px;
 
 					.dnd-container-maps {
 						display: flex;
@@ -273,7 +273,7 @@ input {
 							display: grid;
 							justify-items: center;
 							margin-top: 5px;
-							gap: 50px 4px;
+							gap: 50px 16px;
 
 							.drag-item {
 								box-sizing: border-box;
