--- a/nextgisweb/resource/nodepkg/home-page/component/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Footer.less
@@ -78,61 +78,66 @@
 		font-weight: 600;
 	}
 
-	.footer-info {
-		padding: 0;
-		min-height: 190px;
-		margin: 40px 0;
-		display: flex;
-		flex-wrap: wrap;
-		align-items: flex-start;
-		justify-content: space-around;
+	.footer-block {
+		background: rgb(232 232 232 / 2%);
+		padding: 0 16px;
 
-		.block-info {
-			.ant-input[disabled] {
-				cursor: auto !important;
-				margin: 5px;
-			}
+		.footer-info {
+			padding: 0;
+			min-height: 190px;
+			margin: 40px 0;
+			display: flex;
+			flex-wrap: wrap;
+			align-items: flex-start;
+			justify-content: space-around;
 
-			.service-url {
-				padding: 0 0 0 5px;
-
-				.icon-url {
-					font-size: 12px;
-				}
-			}
-
-			.service-list {
-				width: 100%;
-				display: flex;
-				flex-direction: column-reverse;
-			}
-
-			.address-content {
-				display: grid;
-				grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-				gap: 10px 20px;
-
-				.address {
-					padding: 0 16px 0 0;
+			.block-info {
+				.ant-input[disabled] {
+					cursor: auto !important;
+					margin: 5px;
 				}
 
-				.phone {
-					padding: 0;
+				.service-url {
+					padding: 0 0 0 5px;
 
-					.phone-item {
-						display: flex;
-						width: 100%;
-						justify-content: space-between;
-						align-items: flex-start;
-						border-bottom: 1px dotted rgba(200, 200, 200, 0.25);
+					.icon-url {
+						font-size: 12px;
+					}
+				}
 
-						.name {
-							white-space: nowrap;
-						}
+				.service-list {
+					width: 100%;
+					display: flex;
+					flex-direction: column-reverse;
+				}
 
-						.value {
-							text-align: right;
-							white-space: nowrap;
+				.address-content {
+					display: grid;
+					grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+					gap: 10px 20px;
+
+					.address {
+						padding: 0 16px 0 0;
+					}
+
+					.phone {
+						padding: 0;
+
+						.phone-item {
+							display: flex;
+							width: 100%;
+							justify-content: space-between;
+							align-items: flex-start;
+							border-bottom: 1px dotted rgba(200, 200, 200, 0.25);
+
+							.name {
+								white-space: nowrap;
+							}
+
+							.value {
+								text-align: right;
+								white-space: nowrap;
+							}
 						}
 					}
 				}
