--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -6,114 +6,120 @@
 .header-home-page {
 	padding: 0 10% 0 10%;
 
-	.menus {
-		height: 46px;
-		width: 100%;
-		user-select: none;
+	.header-block {
+		background: rgb(232 232 232 / 2%);
 
-		.menu-component {
-			position: absolute;
-			left: 0;
-			right: 10%;
-			display: flex;
-			text-transform: uppercase;
-			align-items: center;
-			border-radius: 4px;
-			justify-content: flex-end;
+		.menus {
+			height: 46px;
+			width: 100%;
+			user-select: none;
+			background: #e9e9e90d;
 
-			.button-link {
-				width: calc(100% - 24px);
+			.menu-component {
+				position: absolute;
+				left: 0;
+				right: 10%;
+				display: flex;
+				text-transform: uppercase;
+				align-items: center;
+				border-radius: 4px;
+				justify-content: flex-end;
 
-				.menu-indicator {
-					font-size: 24px;
-					color: #fff;
-				}
+				.button-link {
+					width: calc(100% - 24px);
 
-				.ant-menu-horizontal,
-				.ant-menu-item::after,
-				.ant-menu-submenu::after {
-					border: none !important;
-				}
-
-				.ant-menu {
-					color: rgba(0, 0, 0, 0.88);
-					display: flex;
-					justify-content: flex-end;
-				}
-
-				.auth-login {
-					vertical-align: middle;
-
-					>svg.icon {
-						color: #fff;
+					.menu-indicator {
 						font-size: 24px;
+						color: #fff;
+					}
+
+					.ant-menu-horizontal,
+					.ant-menu-item::after,
+					.ant-menu-submenu::after {
+						border: none !important;
+					}
+
+					.ant-menu {
+						color: rgba(0, 0, 0, 0.88);
+						display: flex;
+						justify-content: flex-end;
+					}
+
+					.auth-login {
+						vertical-align: middle;
+
+						>svg.icon {
+							color: #fff;
+							font-size: 24px;
+						}
+					}
+
+					.ant-menu-title-content {
+						font-weight: 600;
 					}
 				}
 
-				.ant-menu-title-content {
-					font-weight: 600;
+				a {
+					color: #ffffff;
 				}
 			}
+		}
 
-			a {
-				color: #ffffff;
+		.name-site {
+			top: 0;
+			width: 100%;
+			position: relative;
+			display: flex;
+			letter-spacing: normal;
+			text-align: center;
+			user-select: none;
+			align-items: center;
+			background: #e9e9e90d;
+
+			.ant-typography {
+				color: #fff;
+				display: flex;
+				justify-content: center;
+			}
+
+			.ant-typography {
+				word-break: break-word;
+				line-height: 1.57142857;
+			}
+
+			.name-site-a {
+				font-family: Forum;
+			}
+
+			.name-site-b {
+				text-transform: uppercase;
+				font-weight: 500;
+			}
+
+			h1:first-child {
+				margin: 0;
+				line-height: 1;
+			}
+
+			h5 {
+				font-weight: 100;
+				margin: 0;
+			}
+
+			.title {
+				width: 100%;
+				height: 152px;
+				color: #fff;
+				display: flex;
+				flex-direction: column;
+				justify-content: space-evenly;
 			}
 		}
-	}
 
-	.name-site {
-		top: 0;
-		width: 100%;
-		position: relative;
-		display: flex;
-		letter-spacing: normal;
-		text-align: center;
-		user-select: none;
-		align-items: center;
-
-		.ant-typography {
-			color: #fff;
-			display: flex;
-			justify-content: center;
-		}
-
-		.ant-typography {
-			word-break: break-word;
-			line-height: 1.57142857;
-		}
-
-		.name-site-a {
-			font-family: Forum;
-		}
-
-		.name-site-b {
-			text-transform: uppercase;
+		.ant-menu::before {
+			background-color: #212529;
 			font-weight: 500;
 		}
-
-		h1:first-child {
-			margin: 0;
-			line-height: 1;
-		}
-
-		h5 {
-			font-weight: 100;
-			margin: 0;
-		}
-
-		.title {
-			width: 100%;
-			height: 152px;
-			color: #fff;
-			display: flex;
-			flex-direction: column;
-			justify-content: space-evenly;
-		}
-	}
-
-	.ant-menu::before {
-		background-color: #212529;
-		font-weight: 500;
 	}
 }
 
