change style home page

--- a/nextgisweb/resource/nodepkg/home-page/component/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Footer.less
@@ -40,7 +40,7 @@
 
 	.logo-col {
 		display: flex;
-		justify-content: flex-start;
+		justify-content: center;
 		user-select: none;
 		pointer-events: none;
 	}
