change style home page

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -51,7 +51,7 @@ input {
 		align-items: center;
 		font-size: 16px;
 		position: relative;
-		top: -24px;
+		top: -21px;
 		width: 24px !important;
 		height: 24px !important;
 	}
@@ -127,6 +127,7 @@ input {
 				display: flex;
 				justify-content: space-between;
 				padding: 5px;
+				margin: 8px 0;
 
 				.search {
 					max-width: 500px;
@@ -202,18 +203,18 @@ input {
 			}
 
 			.menu-maps {
-				margin: 8px 0;
+				margin: 8px 0 24px 0;
 				display: flex;
 
 				.menu-list {
-					max-width: 300px;
+					max-width: 280px;
 					min-height: 350px;
 					padding: 5px;
 
 					.dnd-container-menu {
 						display: flex;
 						flex-direction: column;
-						max-width: 300px;
+						max-width: 280px;
 
 						.menu-group {
 							display: flex;
@@ -271,7 +272,7 @@ input {
 							display: grid;
 							justify-items: center;
 							margin-top: 5px;
-							gap: 50px 16px;
+							gap: 50px 9px;
 
 							.drag-item {
 								box-sizing: border-box;
@@ -389,6 +390,7 @@ input {
 											justify-content: center;
 											width: 100%;
 											height: 100%;
+											font-weight: normal;
 
 											.title-map {
 												width: 100%;
