--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -19,6 +19,7 @@
 				position: absolute;
 				left: 0;
 				right: 10%;
+				padding: 0 10px 0 0;
 				display: flex;
 				text-transform: uppercase;
 				align-items: center;
