change home page, navigation menu button link

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -168,6 +168,7 @@ input {
 
 					.ant-input-affix-wrapper .ant-input-prefix {
 						margin-inline-end: 10px;
+						color: #2a398ca6 !important;
 					}
 
 					.ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled):hover {
