--- a/nextgisweb/resource/nodepkg/description/DescComponent.less
+++ b/nextgisweb/resource/nodepkg/description/DescComponent.less
@@ -1,12 +1,35 @@
-.ant-image-preview-operations,.ant-image-preview-close {
+.ant-image-preview-operations,
+.ant-image-preview-close {
 	background-color: var(--primary);
 }
 
 .desc-component {
+	.link-type-active {
+		color: var(--text-base);
+		cursor: pointer;
+		font-weight: 500;
+		padding: 3px;
+		border-radius: 4px;
+
+		&:hover {
+			color: var(--primary);
+		}
+	}
+
+	.link-type {
+		color: var(--text-secondary);
+		cursor: pointer;
+		font-weight: 500;
+
+		&:hover {
+			color: var(--primary);
+		}
+	}
 
 	.ant-divider-horizontal.ant-divider-with-text::before {
 		transform: translateY(0%);
 	}
+
 	.type-title {
 		color: var(--text-secondary);
 		font-size: 12px;
@@ -18,6 +41,7 @@
 	.ant-space-gap-row-small {
 		row-gap: 0px;
 	}
+
 	.ck-content {
 		overflow: auto;
 		margin: 5px;
