test share feature popup

--- a/nextgisweb/webmap/nodepkg/imodule/IModule.less
+++ b/nextgisweb/webmap/nodepkg/imodule/IModule.less
@@ -288,6 +288,7 @@
             overflow: overlay;
             height: 100%;
             scrollbar-width: thin;
+            padding: 2px;
 
             .content-move {
                 height: 100%;
