test share feature..

--- a/nextgisweb/webmap/nodepkg/imodule/component/ShareFeature.less
+++ b/nextgisweb/webmap/nodepkg/imodule/component/ShareFeature.less
@@ -1,3 +1,29 @@
 .context-url {
     display: flex;
 }
+
+.code-url {
+    color: var(--text-base);
+    background-color: rgba(16, 106, 144, 0.04);
+    box-shadow: none;
+    cursor: pointer;
+    opacity: 1;
+    font-family: "Noto Sans Mono", monospace;
+    padding: 3px;
+    border-radius: 3px;
+    display: inline-block;
+    white-space: normal;
+    max-width: 100%;
+    word-break: break-all;
+    word-wrap: break-word;
+}
+
+.edit-url {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.button-share {
+    margin: 2px;
+}
