--- a/nextgisweb/webmap/nodepkg/imodule/component/ShareFeature.less
+++ b/nextgisweb/webmap/nodepkg/imodule/component/ShareFeature.less
@@ -18,12 +18,6 @@
     word-wrap: break-word;
 }
 
-.edit-url {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-
 .button-share {
-    margin: 2px;
+    color: var(--text-base);
 }
