test url control button imodule popup

--- a/nextgisweb/webmap/nodepkg/display/DisplayWidget.less
+++ b/nextgisweb/webmap/nodepkg/display/DisplayWidget.less
@@ -1,8 +1,11 @@
 .ngw-webmap-display-loader {
     display: flex;
-    position: absolute;
     flex-direction: column;
-    inset: 0;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
 
     > .ngw-webmap-display {
         position: relative;
