--- a/nextgisweb/webmap/nodepkg/imodule/IModule.less
+++ b/nextgisweb/webmap/nodepkg/imodule/IModule.less
@@ -238,6 +238,10 @@
         width: 100%;
         height: 100%;
 
+        .ant-radio-button-wrapper {
+            line-height: 23px;
+        }
+
         .radio-block {
             display: flex;
             width: 30px;
@@ -326,6 +330,10 @@
             .link-block {
                 display: inline-flex;
                 align-items: center;
+
+                button {
+                    box-shadow: none !important;
+                }
             }
         }
     }
@@ -372,11 +380,16 @@
     align-items: center;
 
     .icon-location {
-        padding: 0 5px;
+        padding: 0 7px;
     }
 
     .coords {
-        padding: 0 0;
+        padding: 0 5px;
+    }
+
+    &:hover {
+        background-color: rgba(0, 0, 0, 0.04);
+        border-radius: 4px;
     }
 }
 
@@ -482,7 +495,6 @@
     flex: 0 0 auto;
     margin: 0;
     cursor: pointer;
-    color: var(--text-secondary);
     z-index: 1000;
     border: none;
 
