--- a/nextgisweb/webmap/nodepkg/imodule/IModule.less
+++ b/nextgisweb/webmap/nodepkg/imodule/IModule.less
@@ -331,8 +331,23 @@
                 display: inline-flex;
                 align-items: center;
 
+                .ant-btn-variant-text:disabled {
+                    cursor: auto !important;
+                    color: rgba(0, 0, 0, 0.25) !important;
+
+                    &:hover {
+                        color: rgba(0, 0, 0, 0.25) !important;
+                    }
+                }
+
                 button {
                     box-shadow: none !important;
+
+                    &:hover {
+                        background-color: rgba(0, 0, 0, 0.04);
+                        color: var(--primary);
+                        border-radius: 4px;
+                    }
                 }
             }
         }
