style display body

--- a/nextgisweb/webmap/nodepkg/imodule/IModule.less
+++ b/nextgisweb/webmap/nodepkg/imodule/IModule.less
@@ -152,7 +152,7 @@
             flex: 0 0 auto;
             margin: 0;
             cursor: pointer;
-            color: var(--text-secondary);
+            color: var(--text-base);
             z-index: 1000;
             border-radius: 3px;
             border: none;
