--- a/nextgisweb/webmap/nodepkg/imodule/component/GraphPanel.less
+++ b/nextgisweb/webmap/nodepkg/imodule/component/GraphPanel.less
@@ -34,7 +34,7 @@
     flex: 0 0 auto;
     margin: 0;
     cursor: pointer;
-    color: var(--text-secondary);
+    color: var(--text-base);
     z-index: 1000;
     box-sizing: border-box;
     margin-inline-start: 2px;
