--- a/nextgisweb/webmap/nodepkg/display/DisplayWidget.less
+++ b/nextgisweb/webmap/nodepkg/display/DisplayWidget.less
@@ -1,4 +1,4 @@
-.ngw-webmap-display-loader {
+body,.ngw-webmap-display-loader {
     display: flex;
     flex-direction: column;
     position: fixed;
