--- a/nextgisweb/webmap/nodepkg/imodule/IModule.less
+++ b/nextgisweb/webmap/nodepkg/imodule/IModule.less
@@ -342,6 +342,7 @@
 
                 button {
                     box-shadow: none !important;
+                    font-size: 16px;
 
                     &:hover {
                         background-color: rgba(0, 0, 0, 0.04);
@@ -395,7 +396,8 @@
     align-items: center;
 
     .icon-location {
-        padding: 0 7px;
+        padding: 0 5px;
+        font-size: 16px;
     }
 
     .coords {
