--- a/nextgisweb/webmap/nodepkg/imodule/IModule.less
+++ b/nextgisweb/webmap/nodepkg/imodule/IModule.less
@@ -140,53 +140,58 @@
                 font-weight: var(--ngw-text-font-weight);
             }
         }
+    }
 
-        .icon-symbol {
-            font-size: 16px;
-            width: 24px;
-            height: 24px;
-            display: flex;
-            justify-items: center;
-            justify-content: center;
-            align-items: center;
-            flex: 0 0 auto;
-            margin: 0;
-            cursor: pointer;
-            color: var(--text-base);
-            z-index: 1000;
+    .icon-symbol {
+        font-size: 16px;
+        width: 24px;
+        height: 24px;
+        display: flex;
+        justify-items: center;
+        justify-content: center;
+        align-items: center;
+        flex: 0 0 auto;
+        margin: 0;
+        cursor: pointer;
+        color: var(--text-base);
+        z-index: 1000;
+        border-radius: 3px;
+        border: none;
+        background-color: none;
+        box-sizing: border-box;
+        margin-inline-start: 0;
+        padding: 0;
+
+        svg.icon {
+            margin-right: 0;
+        }
+
+        &:hover {
+            background-color: #00000010;
+            color: var(--primary) !important;
             border-radius: 3px;
             border: none;
-            background-color: none;
-            box-sizing: border-box;
-            margin-inline-start: 2px;
-
-            &:hover {
-                background-color: #00000010;
-                color: var(--primary);
-                border-radius: 3px;
-                border: none;
-            }
         }
+    }
 
-        .icon-disabled {
-            font-size: 16px;
-            width: 24px;
-            height: 24px;
-            display: flex;
-            justify-items: center;
-            justify-content: center;
-            align-items: center;
-            flex: 0 0 auto;
-            margin: 0;
-            cursor: pointer;
-            color: var(--divider-color);
-            // border: solid var(--divider-color) 1px;
-            // background: #8d8d8d36;
-            box-sizing: border-box;
-            pointer-events: none;
-            margin-inline-start: 2px;
-            border-radius: 3px;
-        }
+    .icon-disabled {
+        font-size: 16px;
+        width: 24px;
+        height: 24px;
+        display: flex;
+        justify-items: center;
+        justify-content: center;
+        align-items: center;
+        flex: 0 0 auto;
+        margin: 0;
+        cursor: pointer;
+        color: var(--divider-color);
+        // border: solid var(--divider-color) 1px;
+        // background: #8d8d8d36;
+        box-sizing: border-box;
+        pointer-events: none;
+        margin-inline-start: 2px;
+        border-radius: 3px;
     }
 
     .select-feature-forbidden {
@@ -407,6 +412,7 @@
     &:hover {
         background-color: rgba(0, 0, 0, 0.04);
         border-radius: 4px;
+        color: var(--primary);
     }
 }
 
