--- a/nextgisweb/webmap/nodepkg/imodule/IModule.less
+++ b/nextgisweb/webmap/nodepkg/imodule/IModule.less
@@ -119,7 +119,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-radius: 3px 3px 0 0;
+        border-radius: 4px 4px 0 0;
         padding: 0;
 
         .title-name {
@@ -155,7 +155,7 @@
         cursor: pointer;
         color: var(--text-base);
         z-index: 1000;
-        border-radius: 3px;
+        border-radius: 4px;
         border: none;
         background-color: none;
         box-sizing: border-box;
@@ -169,7 +169,7 @@
         &:hover {
             background-color: #00000010;
             color: var(--primary) !important;
-            border-radius: 3px;
+            border-radius: 4px;
             border: none;
         }
     }
@@ -186,12 +186,10 @@
         margin: 0;
         cursor: pointer;
         color: var(--divider-color);
-        // border: solid var(--divider-color) 1px;
-        // background: #8d8d8d36;
         box-sizing: border-box;
         pointer-events: none;
         margin-inline-start: 2px;
-        border-radius: 3px;
+        border-radius: 4px;
     }
 
     .select-feature-forbidden {
@@ -386,12 +384,17 @@
     display: flex;
     min-height: 24px;
     align-items: center;
+
+    button {
+        width: 100%;
+        border-radius: 4px !important;
+    }
 }
 
 .coordinate-value {
+    height: 24px;
     padding: 0;
     cursor: pointer;
-    border-radius: 3px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -401,8 +404,20 @@
     align-items: center;
 
     .icon-location {
-        padding: 0 6px;
+        padding: 0;
         font-size: 16px;
+    }
+
+    .ant-btn-icon {
+        width: 24px;
+        padding: 0;
+    }
+
+    span {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        padding: 0 6px 0 0;
     }
 
     .coords {
@@ -412,7 +427,7 @@
     &:hover {
         background-color: rgba(0, 0, 0, 0.04);
         border-radius: 4px;
-        color: var(--primary);
+        color: var(--primary) !important;
     }
 }
 
@@ -432,7 +447,7 @@
     padding: 0;
     min-width: 100px;
     background: #ffffff;
-    border-radius: 3px;
+    border-radius: 4px;
     border: solid var(--divider-color) 1px;
     box-sizing: border-box;
     user-select: text;
@@ -463,7 +478,7 @@
         &:hover {
             background-color: #F5F5F5;
             padding: 5px;
-            border-radius: 3px;
+            border-radius: 4px;
         }
     }
 }
@@ -524,7 +539,7 @@
     &:hover {
         background-color: #00000010;
         color: var(--primary);
-        border-radius: 3px;
+        border-radius: 4px;
         border: none;
     }
 }
