--- a/nextgisweb/webmap/nodepkg/imodule/IModule.less
+++ b/nextgisweb/webmap/nodepkg/imodule/IModule.less
@@ -142,6 +142,13 @@
         }
     }
 
+    .icon-checked {
+        width: 24px;
+        height: 24px;
+        font-size: 16px;
+        flex: 0 0 auto;
+    }
+
     .icon-symbol {
         font-size: 16px;
         width: 24px;
@@ -188,7 +195,7 @@
         color: var(--divider-color);
         box-sizing: border-box;
         pointer-events: none;
-        margin-inline-start: 2px;
+        margin-inline-start: 0;
         border-radius: 4px;
     }
 
