identification point with button for zoom to feature or raster layer scope

--- a/nextgisweb/webmap/nodepkg/imodule/IModule.less
+++ b/nextgisweb/webmap/nodepkg/imodule/IModule.less
@@ -5,7 +5,6 @@
     width: 12px;
     height: 12px;
     color: var(--primary);
-    pointer-events: none;
     line-height: 0;
 }
 
@@ -138,7 +137,7 @@
             .layer-name {
                 font-family: var(--ngw-head-font-family-list);
                 font-weight: var(--ngw-text-font-weight);
-                
+
             }
         }
     }
@@ -165,7 +164,7 @@
         z-index: 1000;
         border-radius: 4px;
         border: none;
-        background-color: none;
+        background-color: #fff;
         box-sizing: border-box;
         margin-inline-start: 0;
         padding: 0;
