--- a/nextgisweb/pyramid/nodepkg/layout/header/Header.less
+++ b/nextgisweb/pyramid/nodepkg/layout/header/Header.less
@@ -48,7 +48,7 @@
         display: flex;
         align-items: center;
         gap: 6px;
-        min-width: 0;
+        min-width: 52px;
         min-height: 32px;
     }
 }
