testing selected feature panel

--- a/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
+++ b/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
@@ -58,4 +58,9 @@
             color: rgb(64 64 64) !important;
         }
     }
+
+    .ant-alert-with-description {
+        align-items: flex-start;
+        padding: 10px;
+    }
 }
