testing selected feature panel, added  popover description

--- a/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
+++ b/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
@@ -56,11 +56,16 @@
 
         button {
             color: rgb(64 64 64) !important;
+            font-size: 18px;
         }
     }
+}
 
-    .ant-alert-with-description {
-        align-items: flex-start;
-        padding: 10px;
+.popover-class {
+    .icon-description {
+        font-size: 18px;
+        color: var(--text-base);
+        display: flex;
+        justify-content: center;
     }
 }
