--- a/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
+++ b/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
@@ -47,7 +47,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 5px 5px 0 10px;
+        padding: 5px;
     }
 
     .control-item {
@@ -56,6 +56,7 @@
         button {
             color: rgb(64 64 64) !important;
             font-size: 18px;
+            margin: 0 4px;
         }
     }
 }
