--- a/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
+++ b/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
@@ -1,4 +1,8 @@
 .ngw-webmap-selected-feature-panel {
+    .ngw-webmap-panel-content {
+        gap: 0;
+    }
+
     .row-selected {
         display: flex;
         justify-content: space-between;
@@ -11,34 +15,42 @@
             justify-content: space-between;
             align-items: center;
             width: 100%;
+            padding: 10px 0 0 0;
 
             .label {
                 overflow: hidden;
                 text-overflow: ellipsis;
                 white-space: nowrap;
-                font-weight: 600;
-                width: 100%;
+                font-weight: 500;
                 display: block;
                 text-align: start;
+                width: 100%;
             }
         }
 
         .label-child-element {
             display: flex;
             align-items: center;
-            width: 100%;
-            justify-content: space-between;
             margin: 5px 0;
             color: #50575d;
+            gap: 5px;
+            width: 100%;
+            justify-content: space-between;
+
+            .index-lf {
+                color: var(--text-secondary);
+                font-size: 12px;
+                user-select: none;
+                padding: 0 0 0 5px;
+            }
 
             .label-child {
                 overflow: hidden;
                 text-overflow: ellipsis;
                 white-space: nowrap;
-                padding: 0 5px;
-                width: 100%;
                 display: block;
                 text-align: start;
+                width: 100%;
             }
         }
     }
@@ -52,11 +64,10 @@
 
     .control-item {
         display: flex;
+        gap: 6px;
 
         button {
-            color: rgb(64 64 64) !important;
             font-size: 18px;
-            margin: 0 4px;
         }
     }
 }
