padding style PanelContainer

--- a/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
+++ b/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
@@ -3,6 +3,11 @@
         gap: 0;
     }
 
+    .ngw-webmap-panel-padded {
+        padding-inline: 0;
+        padding-block: 0;
+    }
+
     .row-selected {
         display: flex;
         justify-content: space-between;
