--- a/nextgisweb/webmap/nodepkg/panel/layers/popup/Imodule.less
+++ b/nextgisweb/webmap/nodepkg/panel/layers/popup/Imodule.less
@@ -32,12 +32,99 @@
 	background: #fff;
 	box-sizing: border-box;
 
-	.control-button {
+	.title {
 		display: flex;
-		align-items: flex-end;
-		width: auto;
-		background-color: #eee;
+		justify-content: space-between;
+		align-items: center;
+		border-radius: 4px 4px 0 0;
+		padding: 0;
+
+		.title-name {
+			font-weight: 500;
+			padding: 0 5px;
+			width: 100%;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			cursor: move;
+			display: flex;
+			justify-content: flex-start;
+
+			&:hover {
+				background-color: transparent;
+			}
+
+			.object-select {
+				padding: 0;
+				font-weight: normal;
+			}
+
+			.layer-name {
+				font-family: var(--ngw-head-font-family-list);
+				font-weight: var(--ngw-text-font-weight);
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
+		}
 	}
+}
+
+.icon-checked {
+	width: 24px;
+	height: 24px;
+	font-size: 16px;
+	flex: 0 0 auto;
+}
+
+.icon-symbol {
+	font-size: 16px;
+	width: 24px;
+	height: 24px;
+	display: flex;
+	justify-items: center;
+	justify-content: center;
+	align-items: center;
+	flex: 0 0 auto;
+	margin: 0;
+	cursor: pointer;
+	color: var(--text-base);
+	z-index: 1000;
+	border-radius: 4px;
+	border: none;
+	background-color: #fff;
+	box-sizing: border-box;
+	margin-inline-start: 0;
+	padding: 0;
+
+	svg.icon {
+		margin-right: 0;
+	}
+
+	&:hover {
+		background-color: #00000010;
+		color: var(--primary) !important;
+		border-radius: 4px;
+		border: none;
+	}
+}
+
+.icon-disabled {
+	font-size: 16px;
+	width: 24px;
+	height: 24px;
+	display: flex;
+	justify-items: center;
+	justify-content: center;
+	align-items: center;
+	flex: 0 0 auto;
+	margin: 0;
+	cursor: pointer;
+	color: var(--divider-color);
+	box-sizing: border-box;
+	pointer-events: none;
+	margin-inline-start: 0;
+	border-radius: 4px;
 }
 
 .hover-right {
