--- a/nextgisweb/webmap/nodepkg/popup/component/Popup.less
+++ b/nextgisweb/webmap/nodepkg/popup/component/Popup.less
@@ -43,6 +43,7 @@
 			font-weight: 500;
 			padding: 0 5px;
 			width: 100%;
+			height: 24px;
 			white-space: nowrap;
 			overflow: hidden;
 			text-overflow: ellipsis;
