--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -4,78 +4,65 @@
 }
 
 .header-home-page {
-	padding: 0 10% 0 10%;
+	padding: 0 10%;
 
 	.header-block {
-		background: rgb(232 232 232 / 2%);
+		background: #e9e9e924;
 
-		.menus {
-			height: 46px;
-			width: 100%;
-			user-select: none;
-			background: #e9e9e90d;
 
-			.menu-component {
-				position: absolute;
-				left: 0;
-				right: 10%;
-				padding: 0 10px 0 0;
-				display: flex;
-				text-transform: uppercase;
-				align-items: center;
-				border-radius: 4px;
-				justify-content: flex-end;
+		.menu-component {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			padding: 5px 5px 0px 5px;
 
-				.button-link {
-					width: calc(100% - 24px);
+			.button-link {
+				width: 100%;
+			}
 
-					.menu-indicator {
-						font-size: 24px;
+			.user-menu {
+				.auth-login {
+					vertical-align: middle;
+
+					>svg.icon {
 						color: #fff;
-					}
-
-					.ant-menu-horizontal,
-					.ant-menu-item::after,
-					.ant-menu-submenu::after {
-						border: none !important;
-					}
-
-					.ant-menu {
-						color: rgba(0, 0, 0, 0.88);
-						display: flex;
-						justify-content: flex-end;
-					}
-
-					.auth-login {
-						vertical-align: middle;
-
-						>svg.icon {
-							color: #fff;
-							font-size: 24px;
-						}
-					}
-
-					.ant-menu-title-content {
-						font-weight: 600;
+						font-size: 24px;
 					}
 				}
+			}
 
-				a {
-					color: #ffffff;
-				}
+			.menu-indicator {
+				font-size: 24px;
+				color: #fff;
+			}
+
+			.ant-menu-horizontal,
+			.ant-menu-item::after,
+			.ant-menu-submenu::after {
+				border: none !important;
+			}
+
+			.ant-menu {
+				color: rgba(0, 0, 0, 0.88);
+				display: flex;
+				justify-content: flex-end;
+			}
+
+			.ant-menu-title-content {
+				font-weight: 600;
+				text-transform: uppercase;
+			}
+
+			a {
+				color: #ffffff;
 			}
 		}
 
 		.name-site {
-			top: 0;
-			width: 100%;
-			position: relative;
-			display: flex;
 			letter-spacing: normal;
 			text-align: center;
 			user-select: none;
-			align-items: center;
-			background: #e9e9e90d;
+			padding: 0px 5px 0px 5px;
 
 			.ant-typography {
 				color: #fff;
@@ -121,6 +108,7 @@
 			background-color: #212529;
 			font-weight: 500;
 		}
+
 	}
 }
 
@@ -199,13 +187,13 @@
 .menu-label {
 	text-transform: uppercase;
 	font-weight: 500;
-
-	a:hover {
-		color: #afb4fd !important;
-	}
 }
 
 .ant-modal .ant-modal-close {
 	top: 0;
 	inset-inline-end: 0;
+}
+
+.ant-modal {
+	top: 50px;
 }
