--- a/nextgisweb/resource/nodepkg/home-page/component/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Footer.less
@@ -1,9 +1,10 @@
 .footer-home-page {
 	padding: 0 10% 0 10%;
+	min-width: 410px;
 	color: #fff;
 	height: auto;
 	display: flex;
-	margin-top: 0;
+	// margin-top: 0;
 	justify-content: space-between;
 	flex-direction: column;
 	line-height: 2.25;
@@ -79,7 +80,7 @@
 	}
 
 	.footer-block {
-		background: rgb(232 232 232 / 2%);
+		background: rgb(233 233 233 / 10%);
 		padding: 0 16px;
 
 		.footer-info {
