--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -5,10 +5,10 @@
 
 .header-home-page {
 	padding: 0 10%;
+	min-width: 410px;
 
 	.header-block {
-		background: #e9e9e924;
-
+		background: rgb(233 233 233 / 10%);
 
 		.menu-component {
 			display: flex;
