--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -13,7 +13,7 @@ input {
 }
 
 .wrapper-home-page {
-	min-height: 100vh;
+	min-height: 100%;
 	display: grid;
 	grid-template-rows: auto 1fr auto;
 	letter-spacing: .05rem;
@@ -95,7 +95,7 @@ input {
 
 
 	.list-edit {
-		background-color: #e9e9e91a;
+		background-color: rgb(233 233 233 / 10%);
 		border-radius: 3px;
 	}
 
@@ -120,7 +120,8 @@ input {
 			flex-direction: column;
 			padding: 0;
 			min-height: 461px;
-			background: #e9e9e91a;
+			background: rgb(233 233 233 / 20%);
+			height: 100%;
 			min-width: 410px;
 
 			.search-block {
@@ -307,9 +308,7 @@ input {
 							.maps-item {
 								display: inline-flex;
 								align-items: center;
-								box-sizing: border-box;
-								border: 1px solid #b3b9be78;
-								border-radius: 4px;
+								
 
 								.ant-card {
 									height: 100%;
@@ -537,7 +536,7 @@ div:has(> .upload-footer) {
 	.modal-title {
 		cursor: move;
 		padding: 5px 40px 5px 16px;
-		background-color: #e9e9e91a;
+		background-color: rgb(233 233 233 / 10%);
 		overflow: hidden;
 		-webkit-line-clamp: 2;
 		display: -webkit-box;
