--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -92,17 +92,6 @@ input {
 		color: var(--text-base);
 	}
 
-
-
-	.list-edit {
-		background-color: rgb(233 233 233 / 10%);
-		border-radius: 3px;
-	}
-
-	.col-border {
-		border: 1px solid var(--divider-color);
-	}
-
 	a {
 		text-decoration: none;
 		color: #ffffff;
@@ -120,7 +109,7 @@ input {
 			flex-direction: column;
 			padding: 0;
 			min-height: 461px;
-			background: rgb(233 233 233 / 20%);
+			background: rgba(233, 233, 233, 0.1);
 			height: 100%;
 			min-width: 410px;
 
@@ -308,7 +297,7 @@ input {
 							.maps-item {
 								display: inline-flex;
 								align-items: center;
-								
+
 
 								.ant-card {
 									height: 100%;
@@ -536,7 +525,7 @@ div:has(> .upload-footer) {
 	.modal-title {
 		cursor: move;
 		padding: 5px 40px 5px 16px;
-		background-color: rgb(233 233 233 / 10%);
+		background-color: rgba(233, 233, 233, 0.2);
 		overflow: hidden;
 		-webkit-line-clamp: 2;
 		display: -webkit-box;
