--- a/nextgisweb/resource/nodepkg/home-page/component/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Footer.less
@@ -80,7 +80,7 @@
 	}
 
 	.footer-block {
-		background: rgb(233 233 233 / 10%);
+		background: rgba(233, 233, 233, 0.025);
 		padding: 0 16px;
 
 		.footer-info {
