--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -3,32 +3,29 @@
 	display: flex;
 }
 
+
 .header-home-page {
 	padding: 0 10%;
 	min-width: 410px;
 
 	.header-block {
-		background: rgb(233 233 233 / 10%);
+		background: rgba(233, 233, 233, 0.05);
 
 		.menu-component {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
 			padding: 5px 5px 0px 5px;
 
-			.button-link {
-				width: 100%;
+			.label-sign {
+				display: flex;
+				align-items: center;
 			}
 
-			.user-menu {
-				.auth-login {
-					vertical-align: middle;
+			svg.icon {
+				color: #fff;
+				font-size: 24px;
+			}
 
-					>svg.icon {
-						color: #fff;
-						font-size: 24px;
-					}
-				}
+			.auth-login {
+				vertical-align: middle;
 			}
 
 			.menu-indicator {
@@ -46,11 +43,6 @@
 				color: rgba(0, 0, 0, 0.88);
 				display: flex;
 				justify-content: flex-end;
-			}
-
-			.ant-menu-title-content {
-				font-weight: 600;
-				text-transform: uppercase;
 			}
 
 			a {
@@ -182,6 +174,25 @@
 	svg {
 		padding: 0 8px 0 0;
 	}
+}
+
+.login-icon {
+	padding: 0 0 0 8px;
+}
+
+.logout-icon {
+	min-width: 14px !important;
+	font-size: 14px !important;
+
+	svg.icon {
+		padding: 0;
+	}
+}
+
+.ant-menu-title-content {
+	font-weight: 500;
+	text-transform: uppercase;
+	margin-inline-start: 0 !important;
 }
 
 .menu-label {
