home page menu style

--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -33,6 +33,10 @@
 				color: #fff;
 			}
 
+			.ant-menu-title-content {
+				font-weight: 600;
+			}
+
 			.ant-menu-horizontal,
 			.ant-menu-item::after,
 			.ant-menu-submenu::after {
