--- a/nextgisweb/webmap/nodepkg/layers-tree/DropdownFile.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/DropdownFile.less
@@ -1,81 +1,76 @@
 .linkFile {
-  clear: both;
-  font-size: 14px;
-  line-height: 22px;
-  margin: 0px;
-
-  a {
-    text-decoration: none;
-    color: inherit;
-    display: block;
-    height: 100%;
-    width: 100%;
-  }
-
-  &:hover {
-    background-color: #F5F5F5;
-    border-radius: 3px;
-  }
+	clear: both;
+	font-size: 14px;
+	line-height: 22px;
+	margin: 0;
+	width: 100%;
 }
 
 .fileTitle {
-  display: flex;
-  clear: both;
-  cursor: pointer;
-  font-size: 12px;
-  line-height: 12px;
-  margin: 0;
-  padding: 0;
-  transition: all 0.3s;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  color: rgba(0, 0, 0, .45);
+	display: flex;
+	clear: both;
+	cursor: pointer;
+	font-size: 12px;
+	line-height: 12px;
+	margin: 0;
+	padding: 0;
+	transition: all 0.3s;
+	align-items: center;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	color: rgba(0, 0, 0, .45);
+	width: 100%;
 }
 
 .fileName {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: block;
-  white-space: nowrap;
-  color: var(--primary);
-  max-width: 250px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: block;
+	white-space: nowrap;
+	color: var(--primary);
+	max-width: 250px;
+	text-align: left;
 }
 
 .dowload-file-icon {
-  font-size: 18px;
-  width: 21px;
-  height: 21px;
-  display: flex;
-  justify-items: center;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-  position: relative;
-
-  &:hover {
-    border-radius: 3px;
-    color: var(--primary);
-  }
+	font-size: 18px;
+	display: flex;
+	justify-items: center;
+	justify-content: center;
+	align-items: center;
+	z-index: 1000;
+	position: relative;
 }
 
 .dropdown-file .ant-dropdown-menu {
 	box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
 
-  .ant-dropdown-menu-title-content {
-    flex: auto;
-  }
+	.ant-dropdown-menu-title-content .ant-dropdown-menu-item-extra {
+		padding-inline-start: 0;
+	}
 
-  .ant-dropdown-menu-item,
-  .ant-dropdown-menu-submenu-title {
-    padding: 2px 6px;
-  }
+	.ant-dropdown-menu-item-active {
+		background-color: transparent !important;
+	}
 
-  .ant-dropdown-menu {
-    padding: 0;
-  }
+	.ant-dropdown-menu-title-content {
+		flex: auto;
+	}
 
-  .ant-dropdown-menu-title-content {
-    overflow: hidden;
-  }
+	.ant-dropdown-menu-item,
+	.ant-dropdown-menu-submenu-title {
+		padding: 2px 6px;
+	}
+
+	.ant-dropdown-menu {
+		padding: 0;
+	}
+
+	.ant-dropdown-menu-title-content {
+		overflow: hidden;
+	}
+
+	.ant-btn {
+		padding: 18px 5px !important;
+	}
 }
