home page, style

--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -17,6 +17,10 @@
 			.label-sign {
 				display: flex;
 				align-items: center;
+
+				.label {
+					padding: 0 4px 0 0;
+				}
 			}
 
 			svg.icon {
@@ -37,7 +41,7 @@
 				font-weight: 600;
 			}
 
-			.ant-menu-horizontal,
+			.ant-menu-vertical,
 			.ant-menu-item::after,
 			.ant-menu-submenu::after {
 				border: none !important;
@@ -180,9 +184,7 @@
 	}
 }
 
-.login-icon {
-	padding: 0 0 0 8px;
-}
+
 
 .logout-icon {
 	min-width: 14px !important;
