--- a/nextgisweb/resource/nodepkg/home-page/component/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/component/Header.less
@@ -24,7 +24,6 @@
 			}
 
 			svg.icon {
-				color: #fff;
 				font-size: 24px;
 			}
 
@@ -39,6 +38,10 @@
 
 			.ant-menu-title-content {
 				font-weight: 600;
+			}
+
+			.ant-menu-horizontal {
+				border-bottom: none !important;
 			}
 
 			.ant-menu-vertical,
