test selected feature style button

--- a/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
+++ b/nextgisweb/webmap/nodepkg/panel/selected-feature/SelectedFeature.less
@@ -68,6 +68,7 @@
             }
 
             .label-group {
+                margin: 0 5px 0 0;
 
                 .feature-name,
                 .sub-feature-name {
