test edit layer disable

--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -40,7 +40,7 @@
         }
 
         &.ant-tree-treenode-selected {
-            background-color: transparent;
+            background-color: #e6f0f8;
         }
     }
 
