--- a/nextgisweb/webmap/nodepkg/layers-tree/DropdownFile.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/DropdownFile.less
@@ -59,7 +59,7 @@
 
 	.ant-dropdown-menu-item,
 	.ant-dropdown-menu-submenu-title {
-		padding: 2px 6px;
+		padding: 2px;
 	}
 
 	.ant-dropdown-menu {
