test tree layer dropdownactions

--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -40,7 +40,7 @@
         }
 
         &.ant-tree-treenode-selected {
-            background-color: #e6f0f8;
+            background-color: rgb(217 217 217 / 15%);
         }
     }
 
@@ -108,7 +108,9 @@
                 }
 
                 .edit-title {
-                    font-weight: 500;
+                    font-weight: bold;
+                    color: var(--danger);
+                    padding: 0 2px 0 0;
                 }
             }
 
