--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -92,7 +92,7 @@
 
                 .item-title {
                     display: flex;
-                    justify-content: space-between;
+                    justify-content: flex-start;
                     width: 100%;
                     flex-wrap: nowrap;
 
