--- a/nextgisweb/webmap/nodepkg/layers-tree/DropdownFile.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/DropdownFile.less
@@ -1,47 +1,3 @@
-.linkFile {
-	clear: both;
-	font-size: 14px;
-	line-height: 22px;
-	margin: 0;
-	width: 100%;
-}
-
-.fileTitle {
-	display: flex;
-	clear: both;
-	cursor: pointer;
-	font-size: 12px;
-	line-height: 12px;
-	margin: 0;
-	padding: 0;
-	transition: all 0.3s;
-	align-items: center;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	color: rgba(0, 0, 0, .45);
-	width: 100%;
-}
-
-.fileName {
-	overflow: hidden;
-	text-overflow: ellipsis;
-	display: block;
-	white-space: nowrap;
-	color: var(--primary);
-	max-width: 250px;
-	text-align: left;
-}
-
-.dowload-file-icon {
-	font-size: 18px;
-	display: flex;
-	justify-items: center;
-	justify-content: center;
-	align-items: center;
-	z-index: 1000;
-	position: relative;
-}
-
 .dropdown-file .ant-dropdown-menu {
 	box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
 
@@ -72,5 +28,25 @@
 
 	.ant-btn {
 		padding: 18px 5px !important;
+	}
+
+	.linkFile {
+		font-size: 14px;
+		line-height: normal;
+	}
+
+	.fileTitle {
+		display: flex;
+		color: rgba(0, 0, 0, 0.45);
+	}
+
+	.fileName {
+		overflow: hidden;
+		text-overflow: ellipsis;
+		display: block;
+		white-space: nowrap;
+		color: var(--primary);
+		max-width: 250px;
+		text-align: left;
 	}
 }
