icon edit geometry type, file resource dropdown

--- a/nextgisweb/webmap/nodepkg/layers-tree/DropdownFile.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/DropdownFile.less
@@ -15,7 +15,12 @@
 
 	.ant-dropdown-menu-item,
 	.ant-dropdown-menu-submenu-title {
-		padding: 2px;
+		padding: 0;
+	}
+
+	.ant-btn {
+		padding: 4px;
+		border-radius: 4px;
 	}
 
 	.ant-dropdown-menu {
@@ -26,8 +31,15 @@
 		overflow: hidden;
 	}
 
-	.ant-btn {
-		padding: 18px 5px !important;
+	.title-file {
+		width: 100%;
+		display: flex;
+		justify-content: flex-start;
+		height: 40px;
+	}
+
+	.dowload-file {
+		height: 40px;
 	}
 
 	.linkFile {
