--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -97,13 +97,14 @@
                     justify-content: flex-start;
                     width: 100%;
                     flex-wrap: nowrap;
+                    gap: 5px;
 
                     .icon-resources {
                         margin: 0 10px;
                     }
 
                     .edit-icon {
-                        font-size: 14px;
+                        font-size: 18px;
                         color: var(--primary);
                         width: 24px;
                         height: 24px;
