web map, added selected feature highlighter setting color

--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -172,7 +172,7 @@
     justify-items: center;
     justify-content: center;
     align-items: center;
-    margin: 0 6px;
+    margin: 0 5px 0 1px;
 }
 
 .ant-tree .ant-tree-treenode {
@@ -234,7 +234,7 @@
 }
 
 .legend-list {
-    margin: 0 5px 0 5px;
+    margin: 0 5px 0 0;
 }
 
 .show-resource {
