--- a/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
+++ b/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
@@ -2,13 +2,13 @@
     overflow-x: hidden;
     overflow-y: auto;
 
-    > table {
+    >table {
         border-collapse: separate;
         border-spacing: 0;
         width: 100%;
 
-        > tbody {
-            > tr {
+        >tbody {
+            >tr {
                 &:hover {
                     background-color: var(--divider-color);
                 }
@@ -17,7 +17,7 @@
                     background-color: var(--divider-color);
                 }
 
-                > td {
+                >td {
                     cursor: pointer;
                     box-sizing: border-box;
                     padding: 2px;
@@ -37,13 +37,13 @@
                         min-width: calc((1 / 3) * var(--ct-width));
                         max-width: 0;
 
-                        & > div {
+                        &>div {
                             display: flex;
                             flex-direction: row;
                             line-height: 28px;
 
-                            & > div.arrow,
-                            & > div.error {
+                            &>div.arrow,
+                            &>div.error {
                                 box-sizing: content-box;
                                 padding: 6px 10px;
                                 height: 16px;
@@ -51,15 +51,35 @@
                                 line-height: 1;
                             }
 
-                            & > div.error {
+                            &>div.error {
                                 color: var(--error);
                             }
 
-                            & > div.title {
+                            &>div.title {
                                 flex: 1;
                                 min-width: 0;
                                 overflow: clip;
                                 text-overflow: ellipsis;
+                            }
+
+                            &>div.expanded-group {
+                                display: flex;
+                                justify-content: space-between;
+                                align-items: center;
+                                border-bottom: dotted 1px var(--divider-color);
+
+                                div {
+                                    font-size: 12px;
+                                    color: var(--text-secondary);
+                                    min-width: 0;
+                                    overflow: clip;
+                                    text-overflow: ellipsis;
+                                    padding: 0 0 0 5px;
+
+                                    span {
+                                        color: var(--text-base);
+                                    }
+                                }
                             }
                         }
                     }
@@ -83,7 +103,7 @@
         }
     }
 
-    > div > .drag-between {
+    >div>.drag-between {
         background-color: var(--color-primary);
         height: 2px;
     }
