group status icon collapsed/expanded

--- a/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
+++ b/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
@@ -61,6 +61,14 @@
                                 overflow: clip;
                                 text-overflow: ellipsis;
                             }
+
+                            &>span.expanded-detail {
+                                width: 24px;
+                                display: flex;
+                                align-items: center;
+                                justify-content: flex-end;
+                                color: var(--text-secondary);
+                            }
                         }
                     }
 
