added group exclusive status icon and checkbox

--- a/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
+++ b/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
@@ -62,12 +62,16 @@
                                 text-overflow: ellipsis;
                             }
 
-                            &>span.expanded-detail {
+                            &>span.custom-detail {
                                 width: 24px;
                                 display: flex;
                                 align-items: center;
                                 justify-content: flex-end;
                                 color: var(--text-secondary);
+
+                                .color{
+                                    color: var(--primary);
+                                }
                             }
                         }
                     }
