--- a/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
+++ b/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
@@ -63,14 +63,18 @@
                             }
 
                             &>span.custom-detail {
-                                width: 24px;
+                                min-width: 24px;
                                 display: flex;
                                 align-items: center;
                                 justify-content: flex-end;
                                 color: var(--text-secondary);
 
-                                .color{
+                                .color {
                                     color: var(--primary);
+                                }
+
+                                .checkbox-control {
+                                    padding: 0 0 0 5px;
                                 }
                             }
                         }
