tooltip pointer events none style, changing the icon for the group, fixing an error when creating a resource, fixing the logo

--- a/nextgisweb/static/css/layout.less
+++ b/nextgisweb/static/css/layout.less
@@ -145,3 +145,7 @@ body > .ngw-gui-react-boot {
 // To prevent FOUC, import this as soon as possible. When the SPA or global
 // spinner is done, switch to a normal import from Header.tsx.
 @import "../../pyramid/nodepkg/layout/header/Header.less";
+
+.ant-tooltip {
+    pointer-events: none;
+}
