style complex tree settings webmap layer tree

--- a/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
+++ b/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
@@ -62,6 +62,10 @@
                                 text-overflow: ellipsis;
                             }
 
+                            &>div.layer-color {
+                                color: var(--color-primary);
+                            }
+
                             &>span.custom-detail {
                                 min-width: 24px;
                                 display: flex;
