--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -306,6 +306,18 @@ input {
 									justify-content: space-between;
 									border-radius: 3px;
 
+									.ant-card-head {
+										margin-bottom: -1px;
+										padding: 0px 16px;
+										color: #000000;
+										font-weight: 500;
+										font-size: 18px;
+										background: #fffffff2;
+										border-radius: 4px 4px 0 0;
+										position: absolute;
+										width: 100%;
+									}
+
 									.ant-card-cover {
 										margin: 0;
 										border-bottom: 1px solid #b3b9be78;
