--- a/nextgisweb/resource/nodepkg/resource-section/main/ResourceSectionMain.less
+++ b/nextgisweb/resource/nodepkg/resource-section/main/ResourceSectionMain.less
@@ -44,3 +44,13 @@ dl.ngw-resource-main-section-summary {
         box-shadow: 0 0 5px 0 var(--divider-color);
     }
 }
+
+.map-link {
+    border-radius: 4px;
+    display: block;
+    padding: 0 5px !important;
+
+    &:hover {
+        box-shadow: 0 0 5px 0 var(--divider-color);
+    }
+}
